[gd_scene load_steps=2 format=3 uid="uid://uqu01b72k5i3"]

[ext_resource type="Script" path="res://Scripts/settings.gd" id="1_pi8g5"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pi8g5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VolumeLAbel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume
"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
rounded = true

[node name="ResolutionsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resolution
"

[node name="ResolutionOptions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 4
popup/item_0/text = "1920x1080"
popup/item_1/text = "1280×1024"
popup/item_1/id = 1
popup/item_2/text = "1600×900"
popup/item_2/id = 2
popup/item_3/text = "1280×800"
popup/item_3/id = 3

[node name="WindowModeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Window Mode"

[node name="WindowMode" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Windowed"
popup/item_1/text = "FullScreen"
popup/item_1/id = 1
popup/item_2/text = "Exclusive FullScreen"
popup/item_2/id = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ResolutionOptions" to="." method="_on_resolution_options_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/WindowMode" to="." method="_on_resolution_options_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/WindowMode" to="." method="_on_window_mode_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
